--- a/api-rm/index.html
+++ b/api-rm/index.html
@@ -48,7 +48,7 @@
 
     <script>
 
-      let url_rm = "https://rickandmortyapi.com/api/character";
+      let url_rm = "https://rickandmortyapi.com/api/character/";
 
       axios
         .get(url_rm)
